# SharedCockpit

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  README.md  SharedCockpitConfig.h.in  build_dependencies.sh  header_template.h  imgui.ini
cmake/: FindGameNetworkingSockets.cmake  Findrxcpp.cmake
main/: CMakeLists.txt  main.cpp
main/include/: chat_server_interface.h  chat_view_model.h  chat_window.h  coordinator.h  dataref.h  dataref_base.h  environment.h  first_window.h  flight_recorder.h  float_dataref.h  frames.h  imgui_logger.h  imgui_window.h  recording_window.h  utils.h  viewmodel.h
main/include/EventBus/: EventBus.cpp  EventBus.hpp
main/include/chat/: chat_client.hpp  chat_events.h  chat_view_model.h  chat_window.h  connection_manager.h
main/include/flight_recorder/: flight_recorder_controller.h  flight_recorder_window.h
main/include/network_controller/: client.h  client_window.h  network_controller.h  network_state_enums.h  peer.h  server.h  server_window.h
main/src/: chat_server_interface.cpp  chat_view_model.cpp  chat_window.cpp  coordinator.cpp  dataref.cpp  first_window.cpp  float_dataref.cpp  imgui_logger.cpp  imgui_window.cpp  recording_window.cpp  viewmodel.cpp
main/src/chat/: chat_view_model.cpp  chat_window.cpp
main/src/flight_recorder/: flight_recorder_controller.cpp  flight_recorder_window.cpp
main/src/network_controller/: client.cpp  client_window.cpp  network_controller.cpp  server.cpp  server_window.cpp
standalone/: CMakeLists.txt
standalone/include/: standalone_environment.h  standalone_window.h
standalone/src/: main.cpp  standalone_environment.cpp  standalone_window.cpp
xplane/: CMakeLists.txt  main.cpp
xplane/include/: imgwindow_adapter.h  xplane_dataref.h  xplane_environment.h
xplane/src/: imgwindow_adapter.cpp  main.cpp  osx_clipboard.cpp  xplane_dataref.cpp  xplane_environment.cpp
